# expense-tracker

./: .env  .env.test  .gitignore  Dockerfile  README.md  com.etrack.gmailsync.plist  db.csv  docker-compose.yml  index.ts  package-lock.json  package.json  pyproject.toml  test.ts  tsconfig.json
db/: db.ts  init.sql  types.ts
src/: cli.ts  index.ts  server.ts
src/actions/: actions.py  actions.spec.ts  actions.test.ts  actions.ts
src/api/: gmail.py  gmail.ts
src/auth/: auth.py  auth.ts
src/cli/: bin.ts  command.py  command.ts
src/csv/: csv.ts
src/db/: db.ts
src/utils/: index.ts  scheduler.test.ts  scheduler.ts
